# android-StackBlur

./: README.md  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/androidTest/java/com/xianrui/stackblur_sample/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/xianrui/stackblur_sample/: MainActivity.java
sample/src/main/res/layout/: main.xml
sample/src/main/res/values/: strings.xml
sample/src/test/java/com/xianrui/stackblur_sample/: ExampleUnitTest.java
stackblur/: CMakeLists.txt  build.gradle  proguard-rules.pro
stackblur/src/androidTest/java/com/xianrui/stackblur_sample/: ExampleInstrumentedTest.java
stackblur/src/main/: AndroidManifest.xml
stackblur/src/main/java/com/xianrui/stackblur/: BlurProcess.java  JavaBlurProcess.java  NativeBlurProcess.java  StackBlurManager.java
stackblur/src/main/jni/: com_xianrui_stackblur_NativeBlurProcess.cpp  com_xianrui_stackblur_NativeBlurProcess.h
stackblur/src/main/res/values/: strings.xml
